feat: 400 and 404 error handling
