# src/swagger.json
@@ -147,8 +147,11 @@
 							}
 						}
 					},
+					"400": {
+						"description": "Bad Request"
+					},
 					"404": {
-						"description": "Company Not Found."
+						"description": "Company Not Found"
 					}
 				},
 				"tags": [
@@ -167,7 +170,7 @@
 				]
 			}
 		},
-		"/users": {
+		"/companies/{companyId}/employees": {
 			"get": {
 				"operationId": "GetAllUsers",
 				"responses": {
@@ -194,7 +197,17 @@
 					}
 				},
 				"security": [],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "path",
+						"name": "companyId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			},
 			"post": {
 				"operationId": "SaveUser",
@@ -219,7 +232,17 @@
 					}
 				},
 				"security": [],
-				"parameters": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "companyId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -244,7 +267,7 @@
 				}
 			}
 		},
-		"/users/{userId}": {
+		"/companies/{companyId}/employees/{userId}": {
 			"get": {
 				"operationId": "GetUser",
 				"responses": {
